fix alignment of category links and searchbar by removing topbar

--- a/src/building-blocks/ecommerce-header/ecommerce-header.scss
+++ b/src/building-blocks/ecommerce-header/ecommerce-header.scss
@@ -1,7 +1,6 @@
 .ecommerce-header {
   width: 100%;
   background-color: $white;
-  padding: 1rem 1rem 0;
 
   .logo {
     height: 50px;
@@ -175,4 +174,3 @@
 .ecommerce-header-search-exandable input[type=search]:hover {
   background-color: $white;
 }
-
